Work on issue #6 - Improved responsiveness on the GIS page when on a mobile device / small screen. This includes encapsulating the LayerList widget in an Expand widget, docking the popup to the bottom of the screen to use ArcGIS's native responsive layout, and fixing a bug where the giraffe list would not work when initialized in a collapsed popup.

--- a/src/main/webapp/css/webapp.css
+++ b/src/main/webapp/css/webapp.css
@@ -73,6 +73,14 @@ body {
 }
 
 /* ---
+   GIS Page
+   --- */
+/* Hide zoom widget on mobile screens. */
+.esri-view-width-less-than-small .esri-zoom .esri-widget--button {
+    display:none;
+}
+
+/* ---
    GIS Page - (Giraffe) Popup
    --- */
 .popup-title-container {
